--- a/gitcource/git分支/task2/index.html
+++ b/gitcource/git分支/task2/index.html
@@ -7,6 +7,8 @@
   <title>Document</title>
 </head>
 <body>
+  <input type="text">
+  <input type="text">
   <script src="./console.js"></script>
 </body>
 </html>
